fix hcaptcha not fitting on register

--- a/bootstrap/signin.css
+++ b/bootstrap/signin.css
@@ -26,10 +26,10 @@ body {
 }*/ 
 
 .form-signin {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: auto;
+    width: 100%;
+    max-width: 366px;
+    padding: 15px;
+    margin: auto;
 }
 
 .form-signin .checkbox {
